# ComfyUI-Realtime

./: .comfyignore  .gitignore  LICENSE  README.md  __init__.py  conftest.py  pyproject.toml  pytest.ini
comfyui_realtime/: registry.py  session_registry.py
comfyui_realtime/engine/: audio_framer.py  dialects.py  events.py  executor_bridge.py  resample.py  sentence_chunker.py  session_state.py
comfyui_realtime/nodes/: dev_nodes.py  io_types.py  pipeline_node.py
comfyui_realtime/nodes/provider_nodes/: __init__.py  _hf_model_dirs.py  faster_whisper_stt.py  llama_cpp_llm.py  piper_tts.py  pocket_tts.py  silero_vad.py  transformers_llm.py  vllm_llm.py  whisper_cpp_stt.py
comfyui_realtime/providers/: base.py  faster_whisper_stt.py  llama_cpp_llm.py  piper_tts.py  pocket_tts.py  silero_vad.py  transformers_llm.py  vllm_llm.py  whisper_cpp_stt.py
comfyui_realtime/server/: rest_routes.py  websocket_handler.py
scripts/: example_shared_model_two_characters.json  fetch_pocket_tts_model.py  manual_voice_test.html  register_echo_pipeline.json  register_phase1_pipeline.json  register_phase2_pipeline.json  threading_spike.py
tests/: _stub_vllm_engine.py  _tiny_transformers_fixture.py  conftest.py  test_audio_framer.py  test_cancellation_spike.py  test_dialects.py  test_events.py  test_example_workflows.py  test_executor_bridge.py  test_fetch_pocket_tts_model_script.py  test_init_route_registration.py  test_integration_openai_sdk.py  test_integration_phase1_e2e.py  test_integration_phase2_e2e.py  test_llama_cpp_llm_provider.py  test_node_docs.py  test_node_registration.py  test_pipeline_node.py  test_piper_tts_provider.py  test_piper_voice_resolver.py  test_pocket_tts_provider.py  test_provider_base.py  test_provider_nodes.py  test_registry.py  test_resample.py  test_rest_routes.py  test_sentence_chunker.py  test_session_registry.py  test_session_state.py  test_silero_vad_provider.py  test_task_cancel_spike.py  test_transformers_llm_provider.py  test_transformers_llm_provider_node.py  test_vllm_llm_provider.py  test_vllm_llm_provider_node.py  test_websocket_handler.py  test_whisper_cpp_stt_provider.py
ui/: jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts
ui/src/audio/: audioPlayer.ts  micCapture.ts  pcm.test.ts  pcm.ts
ui/src/components/: ConversationView.test.tsx  ConversationView.tsx  MicControls.test.tsx  MicControls.tsx  PipelineSelector.test.tsx  PipelineSelector.tsx  ResponseArea.tsx  TextInputBox.test.tsx  TextInputBox.tsx  TranscriptFeed.tsx  VoiceSelector.test.tsx  VoiceSelector.tsx
ui/src/hooks/: usePipelineList.test.tsx  usePipelineList.ts
ui/src/protocol/: api.test.ts  api.ts  connection.test.ts  connection.ts  events.test.ts  events.ts  types.ts
ui/src/session/: reducer.test.ts  reducer.ts  useRealtimeSession.ts
workflows/api/: continuous-transcription.json  full-speech-to-speech.json  shared-multi-voice.json  speech-to-text.json  text-to-speech.json  text-to-text.json
workflows/ui/: continuous-transcription.json  full-speech-to-speech.json  shared-multi-voice.json  speech-to-text.json  text-to-speech.json  text-to-text.json
